syntax = "proto3";

package yandex.cloud.priv.datatransfer.v1.legacyendpoint;

option go_package = "a.yandex-team.ru/cloud/bitbucket/private-api/yandex/cloud/priv/datatransfer/v1/legacyendpoint;tm_server_legacyendpoint";

import "yandex/cloud/priv/datatransfer/v1/endpoint/common.proto";
import "yandex/cloud/priv/datatransfer/v1/endpoint/mongo.proto";
import "yandex/cloud/priv/sensitive.proto";

message MongoSource {
    // Hosts names of data-bearing nodes in a replica set
    repeated string hosts = 1;
    int64 port = 2;
    // Replica set name
    string replica_set = 3;
    // Database name associated with the credentials
    string auth_source = 4;
    // User name
    string user = 5;
    // Cloud only raw password
    string raw_password = 6;
    // List of collections for replication. Empty list implies replication of all
    // tables on the deployment. Allowed to use * as collection name.
    repeated endpoint.MongoCollection collections = 8;
    // List of collections excluded from replication. Allowed to use * as collection
    // name for forbid all collections of concrete schema.
    repeated endpoint.MongoCollection excluded_collections = 9;
    // Read mode for mongo client
    bool secondary_preferred_mode = 10;
    string pem_file_content = 11;
}
message ManagedMongoSource {
    string cluster_id = 1;
    // Replica set name
    string replica_set = 3;
    // Database name associated with the credentials
    string auth_source = 4;
    // User name
    string user = 5;
    // Cloud only raw password
    string raw_password = 6 [(sensitive) = true];
    // List of collections for replication. Empty list implies replication of all
    // tables on the deployment. Allowed to use * as collection name.
    repeated endpoint.MongoCollection collections = 8;
    // List of collections excluded from replication. Allowed to use * as collection
    // name for forbid all collections of concrete schema.
    repeated endpoint.MongoCollection excluded_collections = 9;
    // Read mode for mongo client
    bool secondary_preferred_mode = 10;
}
message MongoTarget {
    // Hosts names of data-bearing nodes in a replica set
    repeated string hosts = 1;
    int64 port = 2;
    // Replica set name
    string replica_set = 3;
    // Database name associated with the credentials
    string auth_source = 4;
    // User name
    string user = 5;
    // Cloud only raw password
    string raw_password = 6 [(sensitive) = true];
    string pem_file_content = 8;
    endpoint.CleanupPolicy cleanup_policy = 9;
}
message ManagedMongoTarget {
    string cluster_id = 1;
    // Replica set name
    string replica_set = 3;
    // Database name associated with the credentials
    string auth_source = 4;
    // User name
    string user = 5;
    // Cloud only raw password
    string raw_password = 6 [(sensitive) = true];
    endpoint.CleanupPolicy cleanup_policy = 8;
}
